gccida/c2/expand_eh_return
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_eh_return/src/except.c:3809:21: error: use of undeclared identifier 'machine_mode'
v0 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 2); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_eh_return/src/obj/except.o] Error 1
